set height to prevent vertical stretching in grid

--- a/src/components/PersonCard/style.css
+++ b/src/components/PersonCard/style.css
@@ -1,5 +1,6 @@
 person-card {
   min-height: 100%;
+  height: fit-content;
 }
 
 .person-item {
